# QCM-dual

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  qcm_dual.spec
.claude/agents/: styler.md  tester.md
.claude/commands/: implement.md  review.md  test.md
.github/workflows/: build-exe.yml
docs/: PLAN.md  PROTOCOL.md  SPEC.md
src/: app_controller.py  config.py  main.py
src/core/: acquisition.py  data_models.py  method.py  protocol.py  serial_manager.py  simulator.py
src/export/: csv_export.py
src/gui/: about_dialog.py  connection_panel.py  control_panel.py  device_settings_dialog.py  display_panel.py  export_dialog.py  main_window.py  plot_widget.py  sauerbrey_dialog.py  styles.py
src/processing/: filters.py  sauerbrey.py  statistics.py
tests/: test_acquisition.py  test_csv_export.py  test_filters.py  test_method.py  test_protocol.py  test_sauerbrey.py  test_serial_manager.py  test_simulator.py  test_statistics.py
tests/sample_data/: long_packet.txt  short_packet.txt
