[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qcm-dual"
version = "1.0.0"
description = "Control software for QCM-Dual frequency meter"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.6",
    "pyqtgraph>=0.13",
    "pyserial>=3.5",
    "numpy>=1.24",
    "scipy>=1.11",
    "pandas>=2.0",
    "h5py>=3.9",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-qt>=4.2",
    "ruff>=0.4",
    "pyinstaller>=6.0",
]

[project.scripts]
qcm-dual = "src.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
